--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body {
 .first-wrap {
   height: 100%;
   width: 100vw;
-  background: #ffffff url("https://images.unsplash.com/photo-1445251836269-d158eaa028a6?fit=crop&fm=jpg&h=950&q=80&w=1920") no-repeat fixed;
+  background: #ffffff url("https://i.ibb.co/X2r7skT/7818f92a8f7e9f8ed63baecc05da6c60.jpg") no-repeat fixed;
    background-size: cover;
    background-position: 50% 50%;
 }
@@ -92,7 +92,7 @@ body {
 .second-wrap {
   height: 100%;
   width: 100vw;
-  background: #ffffff url("https://images.unsplash.com/photo-1444090542259-0af8fa96557e?fit=crop&fm=jpg&h=950&q=80&w=1920") no-repeat fixed;
+  background: #ffffff url("https://i.ibb.co/dpJH2YD/istockphoto-866987706-612x612.jpg") no-repeat fixed;
   background-size: cover;
   background-position: 50% 50%;
 }
@@ -101,7 +101,7 @@ body {
 .third-wrap {
   height: 100%;
   width: 100vw;
-  background: #ffffff url("https://images.unsplash.com/photo-1443827423664-eac70d49dd0d?fit=crop&fm=jpg&h=950&q=80&w=1920") no-repeat fixed;
+  background: #ffffff url("https://i.ibb.co/cvtTfs9/d08b2e131359a9a3ee6533f9f1be328f.jpg") no-repeat fixed;
   background-size: cover;
   background-position: 50% 50%;
 }
